增加模板引擎

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=2334
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.charset=UTF-8
+spring.freemarker.cache=false
+##模板后缀(默认为.ftl)
+spring.freemarker.suffix=.html
