--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <scope>test</scope>
             <version>4.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
