--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.freemarker.charset=UTF-8
 spring.freemarker.cache=false
 ##模板后缀(默认为.ftl)
 spring.freemarker.suffix=.html
+
+logging.file.name=jian_lai.log
+logging.file.max-size=10MB
